calculator.css
#calculator {
    background-color: #555;
    /* display: grid; */
    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
    padding: 10px;

    max-width: 500px;

    flex: 1; /* only for if it's a flex item */
    width: 100%;

    box-sizing: border-box;
    overflow: hidden;

}

#calculator .buttons.mobile {
    display: grid;
    gap: 10px;    
    grid-template-columns: repeat(4, 1fr); /* 4 columns, each takes an equal fraction of the width */
    grid-auto-rows: minmax(50px, 1fr);     /* Rows start at 50px but grow uniformly */    
    justify-items: stretch;                /* Makes each button stretch to fill the column */
    align-items: stretch;                  /* Makes each button stretch to fill the row */    
    width: 100%;
    /* height: 100%; */
}

#calculator .button {
    font-size: 1.5rem;

    color: #d0d0d0;
    background-color: #222;

    display: flex;
    justify-content: center;
    align-items: center;

    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;

    padding: 0;
    box-sizing: content-box;

    border: 4px solid transparent;
    border-radius: 8px;
}

#calculator .button:hover {
    border: 4px solid red;
}

#calculator .button:active {
    background-color: #888;
    border: 4px solid #0ff;
}
/* 
#calculator textarea {
    resize: none;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    width: 100%;
} */

#calculator #outputArea {
    border: 4px solid transparent;
    border-radius: 4px;
    font-size: 2.5rem;
    color: white;
    background-color: #444;
    height: 80px;
    margin-bottom: 10px;
    text-align: right;

    display: -webkit-box;
    line-clamp: 3;
    -webkit-line-clamp: 3;
    -webkit-box-orient: vertical;
    overflow: hidden;
    text-overflow: ellipsis;

}



#calculator #inputArea {
    border: 4px solid transparent;
    border-radius: 4px;    
    background-color: #888;
    height: 4rem;
    margin-bottom: 10px;
    display: flex;
}


#calculator #inputZone {
    display: block;
    width: 100%;
    font-size: 2rem;
    color: white;
    text-align: right;
    word-wrap: none;
    overflow-y: hidden;
    overflow-x: auto;
    /* white-space: pre-wrap; Preserves spaces and line breaks as entered     */
    height: 4rem;
    scrollbar-width: thin;
    /* scrollbar-color: #3ac0ca4d #444; */
}
#calculator #inputZone:focus {
    outline: none;
}
#calculator .placeholder {
    display: inline-block;
    width: 10px;
}

#calculator .control.button {
    background-color: #a44;
}

